Refactor index.html with complete HTML structure
Replaced existing product section with a complete HTML structure including meta tags, styles, and various sections such as ABOUT, SERVICES, and CONTACT.

--- a/index.html
+++ b/index.html
@@ -1,43 +1,173 @@
-<!-- PRODUCTS -->
-<section id="products">
-    <h2>PRODUCTS</h2>
+<!DOCTYPE html>
+<html lang="en">
 
-    <div class="services-grid">
-        <div class="card">
-            <h3>XRP Continuation EA</h3>
-            <p>
-                EMA-based continuation pyramid Expert Advisor for MT5.<br>
-                Designed for disciplined, rule-based crypto trading.
-            </p>
-            <p>
-                • Fixed TP per layer<br>
-                • Controlled pyramid entries<br>
-                • Intraday risk management
-            </p>
-        </div>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PYNX</title>
 
-        <div class="card">
-            <h3>EMA Trend Toolkit</h3>
-            <p>
-                Trend identification & continuation framework for crypto and FX markets.
-            </p>
-            <p>
-                • Multi-timeframe logic<br>
-                • Structure-based entries<br>
-                • Automation ready
-            </p>
-        </div>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap" rel="stylesheet">
 
-        <div class="card">
-            <h3>Custom Bot Build</h3>
-            <p>
-                Fully customized trading bots based on your rules and strategy.
-            </p>
-            <p>
-                • MT5 / Python<br>
-                • Alerts & automation<br>
-                • Private deployment
-            </p>
-        </div>
+    <style>
+        :root {
+            --primary-blue: #0b4f6c;
+            --soft-blue: #cfe9f6;
+            --blueprint-line: rgba(11, 79, 108, 0.18);
+            --text-dark: #08384d;
+        }
+
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.7), rgba(207, 233, 246, 0.95));
+            color: var(--text-dark);
+        }
+
+        /* HERO (top section) */
+        .hero {
+            text-align: center;
+            padding: 90px 20px 50px; /* height reduced from 140px */
+            background-image:
+                linear-gradient(to right, transparent 95%, var(--blueprint-line) 100%),
+                linear-gradient(to bottom, transparent 95%, var(--blueprint-line) 100%);
+            background-size: 40px 40px;
+        }
+
+        .hero-title {
+            font-family: Orbitron;
+            font-size: 58px;
+            font-weight: 700;
+            letter-spacing: 0.28em;
+            color: var(--primary-blue);
+            margin-bottom: 8px;
+        }
+
+        /* Sections */
+        section {
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 60px 20px;
+        }
+
+        h2 {
+            font-family: Orbitron;
+            font-size: 32px;
+            letter-spacing: 0.12em;
+            margin-bottom: 18px;
+            color: var(--primary-blue);
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 1.7em;
+            max-width: 780px;
+        }
+
+        /* Services */
+        .services-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 26px;
+            margin-top: 30px;
+        }
+
+        .card {
+            background: rgba(255, 255, 255, 0.65);
+            padding: 24px;
+            border-radius: 14px;
+            border: 1px solid var(--blueprint-line);
+            transition: 0.35s;
+        }
+
+        .card:hover {
+            transform: translateY(-6px);
+            border-color: var(--primary-blue);
+        }
+
+        .card h3 {
+            font-family: Orbitron;
+            font-size: 18px;
+            margin-bottom: 10px;
+            color: var(--primary-blue);
+            letter-spacing: 0.08em;
+        }
+
+        footer {
+            text-align: center;
+            padding: 30px;
+            border-top: 1px solid var(--blueprint-line);
+            font-size: 14px;
+            color: #5c7e8f;
+        }
+    </style>
+</head>
+
+<body>
+
+    <!-- HERO WITHOUT NAVBAR -->
+    <div class="hero">
+        <div class="hero-title">PYNX</div>
     </div>
-</section>
+
+    <!-- ABOUT -->
+    <section id="about">
+        <h2>ABOUT US</h2>
+        <p>
+            PYNX ek future-ready system-driven platform hai jo automation, structure aur discipline ko priority deta hai.
+            Yaha trading emotion se nahi — systems se hoti hai.
+        </p>
+    </section>
+
+    <!-- SERVICES -->
+    <section id="services">
+        <h2>SERVICES</h2>
+
+        <div class="services-grid">
+            <div class="card">
+                <h3>Crypto Automation</h3>
+                <p>BTC, ETH aur SOL ke liye rule-based automated trading engines.</p>
+            </div>
+
+            <div class="card">
+                <h3>Stock Market Systems</h3>
+                <p>NIFTY, BANKNIFTY aur indices ke liye structured strategies.</p>
+            </div>
+
+            <div class="card">
+                <h3>Gold & FX Models</h3>
+                <p>XAUUSD & forex ke liye multi-timeframe professional setups.</p>
+            </div>
+
+            <div class="card">
+                <h3>Custom Trading Bots</h3>
+                <p>Python, MT5, alerts, dashboards aur full automation.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- FOUNDER -->
+    <section id="founder">
+        <h2>FOUNDER</h2>
+        <p>
+            <strong>Krunal Chawada</strong><br>
+            Systems Designer & Market Structure Specialist.
+        </p>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact">
+        <h2>CONTACT</h2>
+        <p>
+            📱 WhatsApp: +91 93270 27629<br>
+            Automation aur professional systems ke liye connect karein.
+        </p>
+    </section>
+
+    <footer>
+        © 2025 PYNX — All Rights Reserved
+    </footer>
+
+</body>
+
+</html>
+
