Revise content and layout in index.html
Updated content for the 'About', 'Services', 'Products', and 'Contact' sections in index.html to reflect new offerings and improved clarity.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
             font-weight: 700;
             letter-spacing: 0.28em;
             color: var(--primary-blue);
-            margin-bottom: 8px;
         }
 
         /* SECTIONS */
@@ -97,7 +96,7 @@
         p {
             font-size: 16px;
             line-height: 1.7em;
-            max-width: 780px;
+            max-width: 900px;
         }
 
         /* GRID + CARDS */
@@ -160,8 +159,13 @@
     <section id="about">
         <h2>ABOUT US</h2>
         <p>
-            PYNX ek future-ready system-driven platform hai jaha trading emotion se nahi,
-            balki automation, structure aur discipline se hoti hai.
+            PYNX is a technology-driven company focused on building
+            <strong>professional trading software, tools, and automation systems</strong>.
+            We provide complete trading platform solutions designed for performance,
+            scalability, and reliability across multiple markets.
+            <br><br>
+            Our work is strictly software-based — covering strategy logic,
+            automation frameworks, execution tools, and system-level trading solutions.
         </p>
     </section>
 
@@ -170,20 +174,20 @@
         <h2>SERVICES</h2>
         <div class="services-grid">
             <div class="card">
-                <h3>Crypto Automation</h3>
-                <p>BTC, ETH aur SOL ke liye rule-based automated trading engines.</p>
+                <h3>Trading Platform Development</h3>
+                <p>End-to-end trading software solutions for Crypto, Forex, and Indian markets.</p>
             </div>
             <div class="card">
-                <h3>Stock Market Systems</h3>
-                <p>NIFTY, BANKNIFTY aur indices ke liye structured strategies.</p>
+                <h3>Automation Systems</h3>
+                <p>Rule-based trading automation with structured risk and execution control.</p>
             </div>
             <div class="card">
-                <h3>Gold & FX Models</h3>
-                <p>XAUUSD & forex ke liye multi-timeframe professional setups.</p>
+                <h3>Strategy Engineering</h3>
+                <p>Scalping, grid, hedging, and market-structure based trading logic.</p>
             </div>
             <div class="card">
-                <h3>Custom Trading Bots</h3>
-                <p>Python, MT5, alerts, dashboards aur full automation.</p>
+                <h3>Custom Software Tools</h3>
+                <p>Private trading tools, bots, indicators, and system utilities.</p>
             </div>
         </div>
     </section>
@@ -191,36 +195,65 @@
     <!-- PRODUCTS -->
     <section id="products">
         <h2>PRODUCTS</h2>
+
+        <p>
+            We provide full trading platform solutions for any market:
+            <strong>Crypto | Forex | Indian Markets</strong>
+        </p>
+
         <div class="services-grid">
+
             <div class="card">
-                <h3>XRP Continuation EA</h3>
-                <p>EMA-based continuation pyramid Expert Advisor for MT5.</p>
+                <h3>Automated Trading Bots</h3>
                 <p>
-                    • Fixed TP per layer<br>
-                    • Controlled pyramid entries<br>
-                    • Intraday risk management
+                    • Scalping Bot<br>
+                    • Hedging Bot<br>
+                    • Grid Bot<br>
+                    • GAP Trading Bot<br>
+                    • One-Side Market Bot<br>
+                    • Sideway Market Bot<br>
+                    • Martingale Bot<br><br>
+                    💵 Many more custom bots available
                 </p>
             </div>
 
             <div class="card">
-                <h3>EMA Trend Toolkit</h3>
-                <p>Trend identification & continuation framework.</p>
+                <h3>TradingView Solutions</h3>
                 <p>
-                    • Multi-timeframe logic<br>
-                    • Structure-based entries<br>
-                    • Automation ready
+                    • TradingView Indicators<br>
+                    • TradingView Backtesting Systems<br>
+                    • TradingView Strategies
                 </p>
             </div>
 
             <div class="card">
-                <h3>Custom Bot Build</h3>
-                <p>Fully customized trading bots.</p>
+                <h3>MT4 / MT5 Solutions</h3>
                 <p>
-                    • MT5 / Python<br>
-                    • Alerts & automation<br>
-                    • Private deployment
+                    • MT4 / MT5 Expert Advisors<br>
+                    • MT4 / MT5 Strategies<br>
+                    • Forex Robots<br>
+                    • Crypto Robots
                 </p>
             </div>
+
+            <div class="card">
+                <h3>Algo Trading Software</h3>
+                <p>
+                    • Algo Trading Software<br>
+                    • Algo Trading Strategies<br>
+                    • Algo Trading Bots<br>
+                    • Algo Trading Automation
+                </p>
+            </div>
+
+            <div class="card">
+                <h3>Copy Trading Systems</h3>
+                <p>
+                    • Single Account Copy Trading<br>
+                    • Multi Account Copy Trading
+                </p>
+            </div>
+
         </div>
     </section>
 
@@ -228,8 +261,8 @@
     <section id="contact">
         <h2>CONTACT</h2>
         <p>
-            📱 WhatsApp: +91 93270 27629<br>
-            Automation aur professional systems ke liye connect karein.
+            📲 Telegram: <strong>@PYNX</strong><br>
+            For software, tools, and trading platform related enquiries.
         </p>
     </section>
 
