--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
         <p>
             PYNX is a technology-driven company focused on building
             <strong>professional trading software, tools, and automation systems</strong>.
-            We provide complete trading platform solutions designed for performance,
-            scalability, and reliability across multiple markets.
+            We deliver structured, scalable, and reliable solutions across
+            Crypto, Forex, and Indian markets.
             <br><br>
             Our work is strictly software-based — covering strategy logic,
             automation frameworks, execution tools, and system-level trading solutions.
@@ -197,7 +197,7 @@
         <h2>PRODUCTS</h2>
 
         <p>
-            We provide full trading platform solutions for any market:
+            We provide full trading platform solutions for
             <strong>Crypto | Forex | Indian Markets</strong>
         </p>
 
@@ -221,8 +221,8 @@
                 <h3>TradingView Solutions</h3>
                 <p>
                     • TradingView Indicators<br>
-                    • TradingView Backtesting Systems<br>
-                    • TradingView Strategies
+                    • TradingView Strategies<br>
+                    • TradingView Backtesting Systems
                 </p>
             </div>
 
@@ -254,7 +254,66 @@
                 </p>
             </div>
 
+            <div class="card">
+                <h3>Indicators & Technical Logic</h3>
+                <p>
+                    • MA / EMA<br>
+                    • RSI, MACD<br>
+                    • Fibonacci<br>
+                    • Ichimoku Cloud<br>
+                    • Pivot Points<br>
+                    • Momentum & Divergence<br>
+                    • Elliott Wave (Rule-Based)
+                </p>
+            </div>
+
+            <div class="card">
+                <h3>Price Action & Structure</h3>
+                <p>
+                    • Candlestick Patterns<br>
+                    • Chart Patterns<br>
+                    • Trendlines & Channels<br>
+                    • Support & Resistance<br>
+                    • Supply & Demand Zones<br>
+                    • Breakout & Retest<br>
+                    • GAP Trading
+                </p>
+            </div>
+
+            <div class="card">
+                <h3>Risk & Trade Management</h3>
+                <p>
+                    • Risk Management Systems<br>
+                    • Risk–Reward Optimization<br>
+                    • Position Sizing<br>
+                    • Scaling In / Out<br>
+                    • Partial Exits<br>
+                    • Session-Based Logic
+                </p>
+            </div>
+
+            <div class="card">
+                <h3>Custom Algo Engineering</h3>
+                <p>
+                    We build <strong>tailor-made algorithms</strong> by combining
+                    indicators, price action, and custom logic
+                    based on trader requirements.
+                    <br><br>
+                    Platforms:<br>
+                    • MT4 / MT5<br>
+                    • TradingView<br>
+                    • Crypto Markets<br>
+                    • Indian Markets
+                </p>
+            </div>
+
         </div>
+
+        <p style="font-size:13px; color:#5c7e8f; margin-top:30px;">
+            Disclaimer: Trading involves risk. All systems are rule-based software solutions.
+            Past performance does not guarantee future results.
+        </p>
+
     </section>
 
     <!-- CONTACT -->
