--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <style>
         :root {
-            --primary-green: #6fa84f;
-            --deep-green: #4f7f3a;
-            --soft-green: #dff1c8;
-            --circuit-line: rgba(255, 255, 255, 0.15);
-            --text-dark: #2f4f2f;
+            --green-main: #7fbf5f;
+            --green-dark: #4f7f3a;
+            --green-card: rgba(140, 200, 110, 0.55);
+            --circuit-line: rgba(255, 255, 255, 0.18);
+            --white: #ffffff;
         }
 
         html {
@@ -25,34 +25,31 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            color: var(--text-dark);
+            color: var(--white);
+            overflow-x: hidden;
 
             background:
                 radial-gradient(circle at center,
                     rgba(200, 255, 170, 0.35),
-                    rgba(130, 190, 90, 0.9)),
+                    rgba(90, 150, 60, 0.95)),
                 linear-gradient(135deg,
                     #7fbf5f,
-                    #5f9f45);
-
-            background-attachment: fixed;
-            overflow-x: hidden;
+                    #4f7f3a);
         }
 
-        /* CIRCUIT OVERLAY */
+        /* CIRCUIT BACKGROUND */
         body::before {
             content: "";
             position: fixed;
             inset: 0;
-            pointer-events: none;
             z-index: -1;
+            pointer-events: none;
 
             background-image:
                 linear-gradient(to right, transparent 96%, var(--circuit-line) 100%),
                 linear-gradient(to bottom, transparent 96%, var(--circuit-line) 100%);
-
-            background-size: 60px 60px;
-            opacity: 0.35;
+            background-size: 56px 56px;
+            opacity: 0.45;
         }
 
         /* NAVBAR */
@@ -60,15 +57,15 @@
             position: sticky;
             top: 0;
             z-index: 1000;
-            background: rgba(255, 255, 255, 0.75);
-            backdrop-filter: blur(8px);
+            background: rgba(0, 0, 0, 0.15);
+            backdrop-filter: blur(10px);
             border-bottom: 1px solid var(--circuit-line);
         }
 
         .navbar ul {
             list-style: none;
             margin: 0;
-            padding: 14px 20px;
+            padding: 16px 20px;
             display: flex;
             justify-content: center;
             gap: 36px;
@@ -78,8 +75,8 @@
             text-decoration: none;
             font-family: Orbitron;
             font-size: 13px;
-            letter-spacing: 0.16em;
-            color: var(--deep-green);
+            letter-spacing: 0.18em;
+            color: var(--white);
             transition: 0.3s;
         }
 
@@ -90,7 +87,7 @@
         /* HERO */
         .hero {
             text-align: center;
-            padding: 120px 20px 90px;
+            padding: 130px 20px 100px;
             background:
                 radial-gradient(circle at center,
                     rgba(255, 255, 255, 0.25),
@@ -99,24 +96,24 @@
 
         .hero-title {
             font-family: Orbitron;
-            font-size: 64px;
+            font-size: 68px;
             font-weight: 700;
-            letter-spacing: 0.32em;
-            color: var(--deep-green);
+            letter-spacing: 0.34em;
+            color: var(--white);
             position: relative;
             display: inline-block;
         }
 
-        /* internal circuit feel */
+        /* INTERNAL CIRCUIT FEEL ON TEXT */
         .hero-title::after {
             content: "";
             position: absolute;
             inset: 0;
             background:
                 linear-gradient(90deg,
-                    transparent 42%,
-                    rgba(255, 255, 255, 0.25) 50%,
-                    transparent 58%);
+                    transparent 40%,
+                    rgba(255, 255, 255, 0.35) 50%,
+                    transparent 60%);
             mix-blend-mode: overlay;
             pointer-events: none;
         }
@@ -125,60 +122,66 @@
         section {
             max-width: 1100px;
             margin: 0 auto;
-            padding: 70px 20px;
+            padding: 80px 20px;
         }
 
         h2 {
             font-family: Orbitron;
             font-size: 32px;
-            letter-spacing: 0.14em;
-            margin-bottom: 20px;
-            color: var(--deep-green);
+            letter-spacing: 0.16em;
+            margin-bottom: 22px;
+            color: var(--white);
         }
 
         p {
             font-size: 16px;
-            line-height: 1.8em;
+            line-height: 1.9em;
             max-width: 900px;
+            color: var(--white);
         }
 
         /* GRID + CARDS */
         .services-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-            gap: 28px;
-            margin-top: 36px;
+            gap: 30px;
+            margin-top: 40px;
         }
 
         .card {
-            background: rgba(255, 255, 255, 0.65);
-            padding: 26px;
-            border-radius: 16px;
+            background: var(--green-card);
+            padding: 28px;
+            border-radius: 18px;
             border: 1px solid var(--circuit-line);
-            transition: 0.35s;
             backdrop-filter: blur(6px);
+            transition: 0.35s;
         }
 
         .card:hover {
-            transform: translateY(-6px);
-            border-color: var(--deep-green);
+            transform: translateY(-8px);
+            background: rgba(160, 220, 130, 0.6);
         }
 
         .card h3 {
             font-family: Orbitron;
             font-size: 18px;
-            margin-bottom: 10px;
-            color: var(--deep-green);
-            letter-spacing: 0.08em;
+            margin-bottom: 12px;
+            letter-spacing: 0.1em;
+            color: var(--white);
+        }
+
+        .card p {
+            color: var(--white);
+            font-size: 15px;
         }
 
         footer {
             text-align: center;
-            padding: 34px;
+            padding: 36px;
             border-top: 1px solid var(--circuit-line);
             font-size: 14px;
-            color: #4f7f69;
-            background: rgba(255, 255, 255, 0.55);
+            color: var(--white);
+            background: rgba(0, 0, 0, 0.15);
         }
     </style>
 </head>
@@ -208,9 +211,6 @@
             <strong>professional trading software, tools, and automation systems</strong>.
             We deliver structured, scalable, and reliable solutions across
             Crypto, Forex, and Indian markets.
-            <br><br>
-            Our work is strictly software-based — covering strategy logic,
-            automation frameworks, execution tools, and system-level trading solutions.
         </p>
     </section>
 
@@ -220,38 +220,28 @@
         <div class="services-grid">
             <div class="card">
                 <h3>Trading Platform Development</h3>
-                <p>End-to-end trading software solutions for Crypto, Forex, and Indian markets.</p>
+                <p>End-to-end trading software solutions for global markets.</p>
             </div>
             <div class="card">
                 <h3>Automation Systems</h3>
-                <p>Rule-based trading automation with structured risk and execution control.</p>
+                <p>Rule-based automation with professional execution control.</p>
             </div>
             <div class="card">
                 <h3>Strategy Engineering</h3>
-                <p>Market-structure, scalping, hedging, and professional trading logic.</p>
+                <p>Market-structure, scalping and institutional logic systems.</p>
             </div>
             <div class="card">
                 <h3>Custom Software Tools</h3>
-                <p>Private trading tools, bots, indicators, and system utilities.</p>
+                <p>Private tools, bots, indicators and algo utilities.</p>
             </div>
         </div>
-    </section>
-
-    <!-- PRODUCTS -->
-    <section id="products">
-        <h2>PRODUCTS</h2>
-        <p>
-            We provide complete trading platform solutions for
-            <strong>Crypto | Forex | Indian Markets</strong>.
-        </p>
     </section>
 
     <!-- CONTACT -->
     <section id="contact">
         <h2>CONTACT</h2>
         <p>
-            📲 Telegram: <strong>@PynxWealthtech</strong><br>
-            For software, tools, and trading platform related enquiries.
+            📲 Telegram: <strong>@PynxWealthtech</strong>
         </p>
     </section>
 
